tests/m3/hopix/typechecker/bad/polymorphism.hopix
fun id ['a] (x : 'a) : 'b = x

val y : int = id [int] (42)